# Typing-based-Games

./: .gitignore  .gitmodules  CMakeLists.txt  Typing-based-game.sln
Font/: Bitmap_0.tga  Pixel_0.tga
RPG/: Character.h  Combat.cpp  Combat.h  Enemies.cpp  Font.cpp  Font.h  Inventory.h  RPG.sln  RPG.vcxproj  RPG.vcxproj.filters  game.cpp  game.h  item.h  main.cpp
RPG/Engine/: Component.h  Core.h  System.h  Window.cpp  Window.h
RPG/Engine/GFX/: Renderer.cpp  Renderer.h
RPG/Game/: Character.cpp  Enemies.h  Inventory.cpp  item.cpp
RPG/RPG/: Character.cpp  Character.h  Combat.cpp  Combat.h  Inventory.cpp  Inventory.h  RPG.vcxproj  RPG.vcxproj.filters  game.cpp  game.h  item.cpp  item.h  main.cpp
RPG/RPG/x64/Debug/: vc142.idb
RPG/RPG/x64/Debug/RPG.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RPG.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RPG/x64/Debug/: RPG.ilk
dependencies/: Bitmap.fnt  Pixel.fnt
dependencies/linux/GLAD/: CMakeLists.txt
dependencies/linux/GLAD/include/glad/: glad.h
dependencies/linux/GLAD/src/: glad.c
dependencies/windows/glad/include/glad/: glad.h
dependencies/windows/glad/src/: glad.c
enc_temp_folder/b4145d443c5d55d1318ce7c7ea2343c/: main.cpp
